--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,23 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-psycopg2-binary
-pydantic
-pydantic-settings
-passlib[bcrypt]
-python-jose[cryptography]
-pyjwt
-openai
-apscheduler
-aiosmtplib
-python-multipart
-httpx
+fastapi>=0.68.0
+uvicorn[standard]>=0.15.0
+sqlalchemy>=1.4.23
+psycopg2-binary>=2.9.1
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+passlib[bcrypt]>=1.7.4
+python-jose[cryptography]>=3.3.0
+python-multipart>=0.0.5
+python-dotenv>=0.19.0
+email-validator>=1.1.3
+aiosmtplib>=1.1.4
+apscheduler>=3.9.1
+openai>=0.27.0
+httpx>=0.23.0
+alembic>=1.7.5
+pytest>=6.2.5
+pytest-asyncio>=0.16.0
+pytest-cov>=2.12.1
+black>=21.9b0
+isort>=5.9.3
+flake8>=3.9.2
+mypy>=0.910
