--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ python-dotenv>=0.19.0
 email-validator>=1.1.3
 aiosmtplib>=1.1.4
 apscheduler>=3.9.1
-openai>=0.27.0
+together>=0.2.0
 httpx>=0.23.0
 alembic>=1.7.5
 pytest>=6.2.5
