--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -116,12 +116,12 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARNING
+level = INFO
 handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = WARNING
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 
