--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "eslint": "^7.32.0",
